# prefect-migrate

./: README.md  pyproject.toml
.github/workflows/: pyright.yml
prefect_migrate/: conversion.py
prefect_migrate/cli/: app.py  flow_run_notifications.py
tests/: test_conversion.py
tests/cli/: test_flow_run_notifications.py
